--- a/src/rust/analyzer-dispatcher/Cargo.toml
+++ b/src/rust/analyzer-dispatcher/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 grapl-graph-descriptions = { path="../graph-descriptions", version="*" }
 grapl-config = {path="../grapl-config", version="*"}
 grapl-observe = {path = "../grapl-observe"}
+grapl-service = {path="../grapl-service"}
 aws_lambda_events = "0.2.1"
 base64 = "0.10.1"
 base16 = "0.1.1"
