--- a/src/rust/generators/sysmon-subgraph-generator/Cargo.toml
+++ b/src/rust/generators/sysmon-subgraph-generator/Cargo.toml
@@ -11,6 +11,7 @@ grapl-observe = {path = "../../grapl-observe", version="*"}
 
 #sqs-lambda = { path = "../../sqs-lambda/" }
 sqs-executor = { path = "../../sqs-executor/" }
+grapl-service = { path = "../../grapl-service/" }
 serde = "1.0.110"
 serde_json = "1.0.53"
 serde_derive = "1.0.110"
