--- a/src/rust/graph-merger/Cargo.toml
+++ b/src/rust/graph-merger/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 grapl-graph-descriptions = { path="../graph-descriptions", version="*"}
 grapl-config = {path="../grapl-config", version="*"}
 grapl-observe = {path="../grapl-observe", version="*"}
+grapl-service = { path="../grapl-service" }
 anyhow = "1.0.*"
 failure = "0.1.*"
 serde = "1.0.110"
