--- a/src/rust/generators/graph-generator-lib/Cargo.toml
+++ b/src/rust/generators/graph-generator-lib/Cargo.toml
@@ -7,18 +7,20 @@ description = "Library for writing Grapl generator services"
 license = "Apache-2.0"
 
 [dependencies]
-#grapl-graph-descriptions = { path="../../graph-descriptions", version="0.2.*" }
+grapl-graph-descriptions = { path="../../graph-descriptions", version="0.2.*" }
 #
 #failure = "0.1.*"
 #sqs-lambda = { path = "../../sqs-lambda/" }
-#grapl-observe = {path = "../../grapl-observe/"}
-#
+grapl-observe = {path = "../../grapl-observe/"}
+sqs-executor = {path="../../sqs-executor"}
+grapl-service = {path="../../grapl-service"}
 #sha2 = "0.7.1"
-#rusoto_s3 = { version="0.45.0", default_features = false, features=["rustls"] }
-#rusoto_core = { version="0.45.0", default_features = false, features=["rustls"] }
-#rusoto_sqs = { version="0.45.0", default_features = false, features=["rustls"] }
-#rusoto_sts =  { version="0.45.0", default_features = false, features=["rustls"] }
-#grapl-config = { path="../../grapl-config", version="0.0.*" }
+rusoto_s3 = { version="0.45.0", default_features = false, features=["rustls"] }
+rusoto_core = { version="0.45.0", default_features = false, features=["rustls"] }
+rusoto_sqs = { version="0.45.0", default_features = false, features=["rustls"] }
+rusoto_sts =  { version="0.45.0", default_features = false, features=["rustls"] }
+grapl-config = { path="../../grapl-config", version="0.0.*" }
+tracing = "0.1.22"
 #
 #base64 = "0.9.2"
 #prost = "0.6.*"
