--- a/src/rust/generators/sysmon-subgraph-generator/Cargo.toml
+++ b/src/rust/generators/sysmon-subgraph-generator/Cargo.toml
@@ -39,7 +39,7 @@ async-trait = "0.1.31"
 zstd = "0.5.1"
 tokio-compat = "0.1.*"
 tokio = { version = "0.2.*", features = ["sync", "rt-core", "macros", "time", "rt-threaded"] }
-#graph-generator-lib = { path="../graph-generator-lib", version="*"}
+graph-generator-lib = { path="../graph-generator-lib", version="*"}
 tracing = "0.1.15"
 tracing-subscriber = "0.2.5"
 tracing-futures = "0.2.4"
