More monitoring, caching

--- a/src/rust/graph-merger/Cargo.toml
+++ b/src/rust/graph-merger/Cargo.toml
@@ -48,3 +48,6 @@ rusoto_credential = "0.45.0"
 rusoto_dynamodb = {version="0.45.0", default_features = false, features=["rustls"]}
 serde_dynamodb = {version="0.6", default_features = false, features=["rustls"]}
 thiserror = "1.0.23"
+lru-cache = "0.1.2"
+tracing = "0.1.22"
+tracing-futures = "0.2.4"
