--- a/src/rust/grapl-config/Cargo.toml
+++ b/src/rust/grapl-config/Cargo.toml
@@ -11,7 +11,6 @@ license = "Apache-2.0"
 log = "0.4.*"
 sqs-executor = { path = "../sqs-executor/" }
 grapl-observe = { path = "../grapl-observe/" }
-#sqs-lambda = { path = "../sqs-lambda/" }
 
 rusoto_s3 = { version="0.45.0", default_features = false, features=["rustls"] }
 rusoto_core = { version="0.45.0", default_features = false, features=["rustls"] }
@@ -27,3 +26,4 @@ tokio = { version = "0.2.4", features = ["sync", "rt-core", "macros", "time", "r
 color-eyre = "0.3.4"
 eyre = "0.4.3"
 async-trait = "0.1.42"
+tracing-appender = "0.1.2"
