fix baseUrl in .tsconfig for absolute imports and use where possible - can not use absolute imports in deeply nested folders - a problem for another day. Also rerun build.sh

--- a/src/js/engagement_view/tsconfig.json
+++ b/src/js/engagement_view/tsconfig.json
@@ -6,7 +6,7 @@
       "dom.iterable",
       "esnext"
     ],
-    "baseUrl": "src",
+    "baseUrl": "./src",
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -23,6 +23,6 @@
     "jsx": "react",
   },
   "include": [
-    "src"
+    "src/**/*.ts"
   ]
 }
