--- a/src/js/grapl-cdk/package.json
+++ b/src/js/grapl-cdk/package.json
@@ -24,11 +24,13 @@
   "dependencies": {
     "@aws-cdk/aws-apigateway": "1.82.0",
     "@aws-cdk/aws-cloudformation": "1.82.0",
+    "@aws-cdk/aws-cloudwatch": "1.82.0",
     "@aws-cdk/aws-cloudwatch-actions": "1.82.0",
     "@aws-cdk/aws-dynamodb": "1.82.0",
     "@aws-cdk/aws-ec2": "1.82.0",
     "@aws-cdk/aws-ecs": "1.82.0",
     "@aws-cdk/aws-elasticache": "1.82.0",
+    "@aws-cdk/aws-events": "1.82.0",
     "@aws-cdk/aws-events-targets": "1.82.0",
     "@aws-cdk/aws-iam": "1.82.0",
     "@aws-cdk/aws-lambda": "1.82.0",
