--- a/src/rust/graph-descriptions/Cargo.toml
+++ b/src/rust/graph-descriptions/Cargo.toml
@@ -8,7 +8,6 @@ license = "MIT"
 
 
 [dependencies]
-
 thiserror = "1.0.16"
 
 prost = "0.6.*"
@@ -20,6 +19,7 @@ serde_json = "1.0.53"
 serde_derive = "1.0.110"
 
 derive_builder = "0.9.0"
+dgraph_query_lib = { git = "ssh://git@github.com/d0nutptr/dgraph_query_lib.git", branch = "main" }
 
 log = "0.4.*"
 
